fix section size and align flex,  PTH-287

--- a/src/assets/sass/_layout.sass
+++ b/src/assets/sass/_layout.sass
@@ -95,10 +95,11 @@ section
         width: auto
 
 section
-  &.is-editable
-    border: 0.2rem rgba(255, 255, 255, 0.1) dashed
   &.full-height
     height: 100vh !important
+  &.is-editable
+    border: 0.2rem rgba(255, 255, 255, 0.1) dashed
+
     .is-tablet &,
     .is-mobile &
       height: auto !important
@@ -107,6 +108,10 @@ section
       &
         height: auto !important
         min-height: 100vh !important
+
+.is-editable
+  section.full-height
+    height: calc(100vh - 8rem) !important
 
 .b-video-popup
   display: flex
